--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -2,6 +2,10 @@ html,
 body{
   font-family: 'Quasimoda', sans-serif !important;
 }
+h1, h2, h3, h4, h5, h6{
+  font-weight: 700!important;
+}
+
 .container-jumbotron{
   h1{
     color: #438bad;
