--- a/app/views/shared/web/common/_footer.erb
+++ b/app/views/shared/web/common/_footer.erb
@@ -1,1 +1,9 @@
-Footer
+<section class="container-fluid">
+  <div class="row">
+    <footer class="col-12 container-footer">
+      Copyright &copy;
+      <%= Date.today.year %>
+      OST.COM LTD. All Rights Reserved.
+    </footer>
+  </div>
+</section>
