--- a/app/views/web/ost/team.html.erb
+++ b/app/views/web/ost/team.html.erb
@@ -1,12 +1,13 @@
-
-<%= render :partial => "/shared/web/common/navbar" %>
-<%= render :partial => "/web/ost/team/about_head" %>
-<%= render :partial => "/web/ost/team/about_nav" %>
-<%= render :partial => "/web/ost/team/team" %>
-<%= render :partial => "/web/ost/team/work_with_us" %>
-<%= render :partial => "/web/ost/team/board_directors" %>
-<%= render :partial => "/web/ost/team/advisors" %>
-<%= render :partial => "/web/ost/team/extended_team" %>
-<%= render :partial => "/web/ost/team/early_backers" %>
-<%= render :partial => "/web/ost/team/security_auditors" %>
-<%= render :partial => "/shared/web/common/index_svg_sprite" %>
+<div class="cyna_heading">
+  <%= render :partial => "/shared/web/common/navbar" %>
+  <%= render :partial => "/web/ost/team/about_head" %>
+  <%= render :partial => "/web/ost/team/about_nav" %>
+  <%= render :partial => "/web/ost/team/team" %>
+  <%= render :partial => "/web/ost/team/work_with_us" %>
+  <%= render :partial => "/web/ost/team/board_directors" %>
+  <%= render :partial => "/web/ost/team/advisors" %>
+  <%= render :partial => "/web/ost/team/extended_team" %>
+  <%= render :partial => "/web/ost/team/early_backers" %>
+  <%= render :partial => "/web/ost/team/security_auditors" %>
+  <%= render :partial => "/shared/web/common/index_svg_sprite" %>
+</div>
