--- a/app/views/web/ost/team/_about_head.erb
+++ b/app/views/web/ost/team/_about_head.erb
@@ -1,11 +1,8 @@
 <div class="abouthead">
-  <div class="abouthead-content">
-    <!--<a href="/"><img src="https://d36lai1ppm9dxu.cloudfront.net/assets/logo/logo.png" alt="simpletoken" class="simpletoken-logo" /></a>-->
-    <div class="container-fluid">
-      <div class="row">
-        <div class="mx-auto col-10 col-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-          <h1 class="desc text-center">We're on a mission to be the blockchain platform of choice for forward-thinking businesses.</h1>
-        </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="mx-auto col-10 col-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+        <h3 class="abouthead-content text-center">We're on a mission to be the blockchain platform of choice for forward-thinking businesses.</h3>
       </div>
     </div>
   </div>
