--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -2,7 +2,7 @@
   <div class="container">
 
     <div class="row">
-      <h2 class="heading mx-auto">Meet Team OST</h2>
+      <h2 class="mx-auto mb-4 pb-3">Meet Team OST</h2>
     </div>
 
     <div class="row">
@@ -297,22 +297,22 @@
                   <div class="caption">
                     <h3 itemprop="name"><%=member[:name] %></h3>
                     <h4 itemprop="jobTitle"><%=member[:title] %></h4>
-                    <p class="desc"><%=member[:description] %></p>
+                    <p class="text-1"><%=member[:description] %></p>
                     <p>
                       <% if member[:linkedIn].present? %>
-                        <a target="_blank" href="<%= member[:linkedIn] %>">LinkedIn</a>
+                        <a class="profile-links" target="_blank" href="<%= member[:linkedIn] %>">LinkedIn</a>
                       <% end %>
                       <% if member[:twitter].present? %>
                         <% if member[:linkedIn].present? %>•&nbsp;<% end %>
-                        <a target="_blank" href="<%= member[:twitter] %>">Twitter</a>
+                        <a class="profile-links" target="_blank" href="<%= member[:twitter] %>">Twitter</a>
                       <% end %>
                       <% if member[:medium].present? %>
                         <% if member[:linkedIn].present? || member[:twitter].present? %>•&nbsp;<% end %>
-                        <a target="_blank" href="<%= member[:medium] %>">Medium</a>
+                        <a class="profile-links" target="_blank" href="<%= member[:medium] %>">Medium</a>
                       <% end %>
                       <% if member[:website].present? %>
                         <% if member[:linkedIn].present? || member[:twitter].present? || member[:medium].present? %>•&nbsp;<% end %>
-                        <a target="_blank" href="<%= member[:website] %>">Website</a>
+                        <a class="profile-links" target="_blank" href="<%= member[:website] %>">Website</a>
                       <% end %>
                     </p>
                   </div>
