--- a/app/assets/stylesheets/web/ost_theme/variables.scss
+++ b/app/assets/stylesheets/web/ost_theme/variables.scss
@@ -20,6 +20,7 @@ $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black:    #000 !default;
+$side-bar-nav-width : 250px;
 
 $grays: () !default;
 $grays: map-merge((
@@ -38,12 +39,55 @@ $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
+$red:     #eb4d4a !default; // customized
+$orange:  #F18543 !default; // customized
+$yellow:  #F6C62B !default; // customized
 $green:   #28a745 !default;
-$teal:    #20c997 !default;
-$cyan:    #17a2b8 !default;
+$teal:    #84D1D4 !default; // customized
+$cyan:    #438BAD !default; // customized
+$sherpa:  #61818a !default; // customized
+$rice-cake: #EEEDDC !default; // customized
+$cyanish-gray: #9BAFB5 !default; // customized
+$mystic: #DADFDC !default; // customized
+$banana: #FBD764 !default; // customized
+$aqua: #84D1D4 !default; // customized
+$shakespeare: #69A2BD !default; // customized
+$telegram-color : #85b4ca !default; //customized
+
+// Theme background colors
+$yellow-bg: #F9F8E6 !default;
+$grey-bg:   #F6F8FA !default;
+$blue-bg:   #F9FDFD !default;
+$teal-bg:   #f9fafa !default;
+$alice-blue: #f1f5f8!default; // customized
+
+// Theme blue shades
+$blue-100:  #D9E8EF !default;
+$blue-200:  #D2E3E5 !default;
+$blue-300:  #bfe6e8 !default;
+$blue-400:  #84d1d4 !default;
+$blue-500:  #8EB9CE !default;
+$blue-600:  #819AA1 !default;
+$blue-800:  #6da4a9  !default;
+$blue-800:  #597A84 !default; // font-primary
+$blue-900:  #34445b !default;
+$blue-1000:  #595b5e !default;
+
+$green-400: #438cad !default;
+$green-500: #5a768c !default;
+
+// Theme yellow shades
+$yellow-300:  #E4B030 !default;
+$yellow-400:  #D9A025 !default;
+$yellow-500 : #c0993a !default;
+$yellow-600:  #af7f19 !default;
+
+
+//Theme orange shades
+$orange-100: #f8c2a1 !default;
+
+// Theme cyan shades
+$cyan-100:  #c1e8e9 !default;
 
 $colors: () !default;
 $colors: map-merge((
@@ -226,7 +270,7 @@ $transition-collapse:         height .35s ease !default;
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-family-sans-serif:      'Quasimoda', Source Sans Pro, sans-serif !default;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:            $font-family-sans-serif !default;
 // stylelint-enable value-keyword-case
@@ -242,12 +286,20 @@ $font-weight-bold:            700 !default;
 $font-weight-base:            $font-weight-normal !default;
 $line-height-base:            1.5 !default;
 
-$h1-font-size:                $font-size-base * 2.5 !default;
-$h2-font-size:                $font-size-base * 2 !default;
-$h3-font-size:                $font-size-base * 1.75 !default;
-$h4-font-size:                $font-size-base * 1.5 !default;
+$h1-font-size:                $font-size-base * 2.75 !default;
+$h2-font-size:                $font-size-base * 2.5 !default;
+$h3-font-size:                $font-size-base * 2.25 !default;
+$h4-font-size:                $font-size-base * 1.75 !default;
 $h5-font-size:                $font-size-base * 1.25 !default;
 $h6-font-size:                $font-size-base !default;
+
+$font-weight-100:             100 !default;
+$font-weight-200:             200 !default;
+$font-weight-300:             300 !default;
+$font-weight-400:             400 !default;
+$font-weight-500:             500 !default;
+$font-weight-600:             600 !default;
+$font-weight-700:             700 !default;
 
 $headings-margin-bottom:      ($spacer / 2) !default;
 $headings-font-family:        inherit !default;
@@ -265,6 +317,24 @@ $display2-weight:             300 !default;
 $display3-weight:             300 !default;
 $display4-weight:             300 !default;
 $display-line-height:         $headings-line-height !default;
+
+$text1-size:               0.875rem !default;
+$text2-size:               1rem !default;
+$text3-size:               1.125rem !default;
+$text4-size:               1.25rem !default;
+
+$text1-weight:             100 !default;
+$text2-weight:             300 !default;
+$text3-weight:             300 !default;
+$text4-weight:             300 !default;
+
+$text-line-height:         1.25rem !default;
+
+$text-color-1:             $blue-1000 !default;
+$text-color-2:             $blue-800 !default;
+$text-color-3:             $blue-800 !default;
+$text-color-4:             $blue-800 !default;
+
 
 $lead-font-size:              ($font-size-base * 1.25) !default;
 $lead-font-weight:            300 !default;
