--- a/app/views/web/ost/team/_security_auditors.erb
+++ b/app/views/web/ost/team/_security_auditors.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1 mx-auto">
       <div class="advisors">
-        <h2 class="heading text-center">Security Auditors</h2>
+        <h2 class="mb-4 pb-3 text-center">Security Auditors</h2>
         <ul class="row">
           <li class="col-12 col-sm-4">
             <a href="https://zeppelin.solutions/" title="Zeppelin" target="_blank">
