--- a/app/views/web/ost/team/_extended_team.erb
+++ b/app/views/web/ost/team/_extended_team.erb
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col-sm-10 col-sm-offset-1 mx-auto">
             <div class="advisors">
-              <h2 class="heading text-center">Extended Team</h2>
+              <h2 class="mb-4 pb-3 text-center">Extended Team</h2>
               <ul class="row">
                 <li class="col-12 col-sm-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
                   <a itemprop="url" href="https://www.smithandcrown.com/" title="Smith + Crown" target="_blank">
