--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -7,7 +7,7 @@
 
     <div class="row">
 
-      <div class="col-12 col-sm-10 col-sm-offset-1 mx-auto">
+      <div class="col-12 col-md-10 col-md-offset-1 mx-auto">
 
           <div class="core-team">
 
@@ -291,12 +291,12 @@
 
             <% core_team.each_with_index do|member, index| %>
               <% if (index % 3) == 0 %><div class="row mx-auto"><% end %>
-              <div class=" col-12 col-sm-4 col-sm-offset-0" itemprop="member" itemscope itemtype="http://schema.org/Person">
+              <div class="col-10 col-md-4" itemprop="member" itemscope itemtype="http://schema.org/Person">
                 <div class="thumbnail">
                   <img class='img-fluid' itemprop="photo" src="<%=member[:image] %>" alt="<%=member[:name] %>">
                   <div class="caption">
-                    <h3 itemprop="name"><%=member[:name] %></h3>
-                    <h4 itemprop="jobTitle"><%=member[:title] %></h4>
+                    <h5 itemprop="name"><%=member[:name] %></h3>
+                    <h6 itemprop="jobTitle"><%=member[:title] %></h4>
                     <p class="text-1"><%=member[:description] %></p>
                     <p>
                       <% if member[:linkedIn].present? %>
