--- a/app/views/web/ost/team/_work_with_us.erb
+++ b/app/views/web/ost/team/_work_with_us.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
 
-      <div class="col-12 col-sm-10 col-sm-offset-1 mx-auto">
+      <div class="col-12 col-md-10 col-md-offset-1 mx-auto">
 
         <div class="row">
           <div class="col-12 text-center">
