--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -1,9 +1,10 @@
 <%= render :partial => "/shared/web/common/navbar" %>
+
 <div class="container container-text-page container-privacy">
 
   <div class="row">
-    <div class="content">
-      <h1 class="page-title">OST <small>Privacy Policy</small></h1>
+    <div class="col-12">
+      <h2>Privacy Policy</h2>
 
       <h4>Introduction</h4>
       <p>
@@ -198,4 +199,5 @@
   </div>
 
 </div>
+
 <%= render :partial => "/shared/web/common/index_svg_sprite" %>
