--- a/app/assets/stylesheets/web/common/_common.scss
+++ b/app/assets/stylesheets/web/common/_common.scss
@@ -1,9 +1,8 @@
 // Import theme variables
 @import "../ost_theme/variables";
 
-.cyna_heading {
-  h1 , h2 , h3 , h4 , h5 , h6 {
-    color: $cyan;
-  }
-
+// _reboot.scss override
+body {
+  font-weight: $font-weight-light;
+  color: $blue-800;
 }
