--- a/app/assets/stylesheets/web/ost_theme/bootstrap.scss
+++ b/app/assets/stylesheets/web/ost_theme/bootstrap.scss
@@ -4,3 +4,7 @@
 
 // As of now, only variables are overrided
 @import "../../plugins/bootstrap/scss/bootstrap";
+
+//Custom overrides for components
+@import "components/buttons";
+
