--- a/app/assets/stylesheets/web/ost_theme/components/_buttons.scss
+++ b/app/assets/stylesheets/web/ost_theme/components/_buttons.scss
@@ -1,76 +1,54 @@
+
 .btn{
-  font-weight: 500!important;
+  font-size: $btn-font-base-size;
   text-transform: uppercase;
-  font-size: 0.9rem!important;
-  border-width: 1.5px!important;
-  padding: 0.75rem 1.6rem!important;
   letter-spacing: 1px;
+  padding: .75rem 1.6rem !important;
   -webkit-transition: color .3s ease-in-out,background-color .3s ease-in-out,border-color .3s ease-in-out,box-shadow .3s ease-in-out !important;
   -moz-transition: color .3s ease-in-out,background-color .3s ease-in-out,border-color .3s ease-in-out,box-shadow .3s ease-in-out !important;
   transition: color .3s ease-in-out,background-color .3s ease-in-out,border-color .3s ease-in-out,box-shadow .3s ease-in-out !important;
 
+  &:focus {
+    outline: none;
+    text-decoration: none;
+    box-shadow: none;
+  }
+
   &.btn-primary{
-    border-color:#E4B030;
-    background: #E4B030;
-    &:focus{
-      color: #fff;
-      outline: none;
-      text-decoration: none;
-      box-shadow: none;
-    }
+    border-color:$yellow-300 ;
+    background: $yellow-300;
     &:active{
-      border-color:#D9A025!important;
-      background-color: #D9A025!important;
+      border-color: $yellow-400;
+      background-color: $yellow-400;
     }
     &:hover{
-      color: #fff;
       text-decoration: none;
-      border-color:#D9A025!important;
-      background-color: #D9A025!important;
+      border-color: $yellow-400;
+      background-color: $yellow-400;
     }
   }
-
   &.btn-secondary{
-    border: 1px solid #34445b;
-    background-color: #ffffff;
-    color: #34445b;
+    border: 1.5px solid $blue-900;
+    background-color: $white;
+    color: $blue-900;
     &:focus{
-      color: #34445b;
-      outline: none;
-      text-decoration: none;
-      box-shadow: none;
+      border: $btn-border-width solid $blue-900;
+      background-color: $white;
+      color: $blue-900;
     }
     &:active{
-      color: #34445b!important;
-      border-color:#34445b!important;
-      background-color: #ffffff!important;
+      color: $white;
+      border-color: $blue-900;
+      background-color: $blue-900;
     }
     &:hover{
-      color: #fff;
-      text-decoration: none;
-      background-color: #34445b;
-      border-color: #34445b;
+      color: $white;
+      border-color: $blue-900;
+      background-color: $blue-900;
     }
   }
 
-  &.btn-gold-border{
-    border: 1px solid #e4b030;
-    background: #ffffff;
-    color: #e4b030;
-    &.focus-cls,
-    &:focus{
-      color: #7f9183;
-      outline: none;
-      text-decoration: none;
-    }
-    &.hover-cls, &.active-cls,
-    &:hover, &:active{
-      color: #7f9183;
-      text-decoration: none;
-      background-color: #ffffff;
-      border: 1px solid #7f9183;
-    }
-  }
+
 
 }
 
