--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -4,9 +4,9 @@
 
   <div class="row">
     <div class="col-12">
-      <h2>Privacy Policy</h2>
+      <h2 class="mt-4 mb-2">Privacy Policy</h2>
 
-      <h4>Introduction</h4>
+      <h5 class="mt-4 pt-2">Introduction</h5>
       <p>
         We are OST.com Limited of Hong Kong and our company registration number is 2570554 (“OST.com Limited”, “we” or “us”). Your privacy is important to us. We are committed to protecting the privacy, confidentiality and security of the personal data we hold by complying with the requirements under applicable laws and regulations. We are equally committed to ensuring that all our employees, service providers and agents uphold these obligations. This policy explains how we manage personal data within our organisation.
       </p>
@@ -31,7 +31,7 @@
         Where we collect personal data from you, we will generally do so ourselves. However, in some cases we may collect personal data from a third party, such as through your representatives, contractors who provide services to us, or third parties who refer you to us because they think you may be interested in our products or services.
       </p>
 
-      <h4>Kinds of personal data we collect</h4>
+      <h5 class="mt-4 pt-2">Kinds of personal data we collect</h5>
       <p>
         The kinds of personal data that we collect and hold about you may include:
       </p>
@@ -50,7 +50,7 @@
         Without this information, we may not be able to provide you with our products or services (or with all of the features and functionality offered by our products or services) or to respond to queries or requests that you submit to us.
       </p>
 
-      <h4>Purposes for which we use personal data</h4>
+      <h5 class="mt-4 pt-2">Purposes for which we use personal data</h5>
       <p>
         We use personal data that we collect about you for the following purposes:
       </p>
@@ -71,7 +71,7 @@
         <li>to keep you informed about our activities, including by sending out newsletters</li>
       </ul>
 
-      <h4>Direct marketing</h4>
+      <h5 class="mt-4 pt-2">Direct marketing</h5>
 
       <p>
         We may from time to time use your personal data in order to send you marketing materials about products or services that we think you may be interested in (including in some cases products and services that are provided by a third party). We may not use your personal data unless we have received your consent. You can opt-out of receiving marketing communications from us by contacting us at support@ost.com.
@@ -102,7 +102,7 @@
         We may also use and disclose your information for other purposes in accordance with your requests or instructions.
       </p>
 
-      <h4>People to whom we disclose personal data</h4>
+      <h5 class="mt-4 pt-2">People to whom we disclose personal data</h5>
 
       <p>
         We may share personal data about you with:
@@ -124,12 +124,12 @@
         <b><i>We will never sell your personal data to any third party.</i></b>
       </p>
 
-      <h4>Cookies</h4>
+      <h5 class="mt-4 pt-2">Cookies</h5>
       <p>
         We use cookies to monitor and observe your use of our websites, compile aggregate data about that use, and provide you with a more effective service (which may include customising parts of our websites based on your preferences and past activities on those websites). "Cookies" are small text files created and stored on your hard drive by your internet browser software, in order to hold relevant information about the web page you are currently viewing. Most internet browsers have a facility that will allow you to disable cookies altogether – please refer to your browser’s help menu to find out how to do this. While you will still be able to browse our websites with cookies disabled on your internet browser, some website functionality may not be available or may not function correctly.
       </p>
 
-      <h4>Storage and security of personal data</h4>
+      <h5 class="mt-4 pt-2">Storage and security of personal data</h5>
       <p>
         We generally store the personal data that we collect in electronic databases, some of which may be held on our behalf by third party data storage providers. Sometimes we also keep hard copy records of this personal data in physical storage facilities. We use a range of physical and technical security processes and procedures to protect the confidentiality and security of the information that we hold, and we update these from time to time to address new and emerging security threats that you become aware of.
       </p>
@@ -137,7 +137,7 @@
         We also take steps to monitor access to and modification of your information by our staff, and ensure that our staff are aware of and properly trained in their obligations for managing your privacy.
       </p>
 
-      <h4>Google Analytics</h4>
+      <h5 class="mt-4 pt-2">Google Analytics</h5>
       <p>
         Our website uses Google Analytics, a web analytics service provided by Google, Inc. (“Google”). Google Analytics uses cookies to help the website analyse how users use our website.
       </p>
@@ -148,7 +148,7 @@
         You may refuse the use of cookies by selecting the appropriate settings on your browser, however please note that if you do this you may not be able to use the full functionality of our website. By using our website, you consent to the processing of data about you by Google in the manner and for the purposes set out above.
       </p>
 
-      <h4>Retention of personal data</h4>
+      <h5 class="mt-4 pt-2">Retention of personal data</h5>
       <p>
         Your personal data will not be kept longer than required.
       </p>
@@ -156,7 +156,7 @@
         We may retain your personal data for a period of 5 years. At our discretion, we may retain personal data for longer than the said period if we consider it necessary or desirable to do so to meet our legal or regulatory obligations.
       </p>
 
-      <h4>Access and correction</h4>
+      <h5 class="mt-4 pt-2">Access and correction</h5>
       <p>
         If you want to access any of the personal data that we hold about you or to correct some aspect of it (e.g. because you think it is incomplete or incorrect), please contact our privacy compliance team using the contact details set out below. To protect the integrity and security of the information we hold, we may ask that you follow a defined access procedure, which may include steps to verify your identity. In certain cases we may charge you an administration fee for providing you with access to the information you have asked for, but we will inform you of this before proceeding. There may be cases where we are unable to provide the information you request, such as where it would interfere with the privacy of others or result in a breach of confidentiality. In these cases we will let you know why we cannot comply with your request.
       </p>
@@ -164,7 +164,7 @@
         Even if you do not request access to and/or correct your personal data held by us, if we are satisfied that, having regard to the reasons for which we hold your personal data, that personal data is inaccurate, incomplete, out-of-date, irrelevant or misleading, we may take reasonable steps to correct that information.
       </p>
 
-      <h4>Your consent</h4>
+      <h5 class="mt-4 pt-2">Your consent</h5>
       <p>
         By using our site, providing personal data and/or using any of our products or services, you agree that:
       </p>
@@ -180,19 +180,19 @@
         </li>
       </ul>
 
-      <h4>Complaints</h4>
+      <h5 class="mt-4 pt-2">Complaints</h5>
       <p>
         We try to meet the highest standards in order to protect your privacy. However, if you are concerned about the way in which we are managing your personal data and think we may have breached any applicable privacy laws, or any other relevant obligation, please contact our privacy compliance team using the contact details set out below. We will make a record of your complaint and refer it to our internal complaint resolution department for further investigation. We will deal with the matter as soon as we can, and keep you informed of the progress of our investigation.
       </p>
       <p>
         If we have not responded to you within a reasonable time or if you feel that your complaint has not been resolved to your satisfaction, you are entitled to make a complaint to the Hong Kong Privacy Commissioner for Personal Data.
       </p>
-      <h4>Changes to this policy</h4>
+      <h5 class="mt-4 pt-2">Changes to this policy</h5>
       <p>
         We may make changes to this policy from time to time, to take into account changes to our standard practices and procedures or where necessary to comply with new laws and regulations. The latest version of this policy will always be available on our website.
       </p>
-      <h4>Contact details</h4>
-      <p>
+      <h5 class="mt-4 pt-2">Contact details</h5>
+      <p class="mb-5">
         If you want any further information from us on privacy matters, please contact our privacy compliance team at privacy@ost.com.
       </p>
     </div>
