responsive layout team and privacy fixed

--- a/app/assets/stylesheets/web/ost/team/About.scss
+++ b/app/assets/stylesheets/web/ost/team/About.scss
@@ -111,7 +111,7 @@
     margin-bottom: 40px;
     margin-top: 0;
   }
-  .col-sm-4{
+  .col-md-4{
     margin-bottom: 25px;
     text-align: center;
     min-height: 60px;
@@ -125,7 +125,7 @@
       list-style-type: none;
     }
   }
-  .col-sm-4{
+  .col-md-4{
     margin-bottom: 25px;
     text-align: center;
     min-height: 66px;
