--- a/app/views/web/ost/team/_security_auditors.erb
+++ b/app/views/web/ost/team/_security_auditors.erb
@@ -4,17 +4,17 @@
       <div class="advisors">
         <h2 class="mb-4 pb-3 text-center">Security Auditors</h2>
         <ul class="row">
-          <li class="col-12 col-sm-4">
+          <li class="col-12 col-md-4">
             <a href="https://zeppelin.solutions/" title="Zeppelin" target="_blank">
               <span class="z-audits-logo"></span>
             </a>
           </li>
-          <li class="col-12 col-sm-4">
+          <li class="col-12 col-md-4">
             <a href="https://cure53.de/" title="Cure53" target="_blank">
               <span class="cure53-logo"></span>
             </a>
           </li>
-          <li class="col-12 col-sm-4">
+          <li class="col-12 col-md-4">
             <a href="https://www.bokconsulting.com.au/" title="Bok Consulting" target="_blank">
               <span class="bok-consulting-logo"></span>
             </a>
